# desktopd

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  desktop.conf  gen-introspections.py
introspections/: DESKTOP_DESKTOP_INTROSPECTION.xml  DESKTOP_INTROSPECTION.xml  IO_INTROSPECTION.xml  ORBITRC_INTROSPECTION.xml  SERVER_INTROSPECTION.xml
presets/: desktopd-install-kde
scripts/: kde-CurrentDesktop  kde-InsertDesktop  kde-NumberOfDesktops
src/: desktopd-server.c  desktopd-server.h  desktopd.c  desktopd.pro  interfaces.c  interfaces.h
src/scripts/: main.cpp
usr/lib/systemd/user/: desktopd.service
usr/share/desktopd/scripts-enabled/: numberOfDesktops
